--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -69,11 +69,12 @@
   <div class="box">
     <h2>Login</h2>
 
-    <form>
-      <input type="email" placeholder="Email" required />
-      <input type="password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
+  <form method="POST" action="/api/auth/login">
+    <input type="email" name="email" placeholder="Email" required />
+    <input type="password" name="password" placeholder="Password" required />
+    <button type="submit">Login</button>
+  </form>
+
 
     <div class="link">
       New user? <a href="/register">Register here</a>
